worked on images in slides

--- a/demo/demo.tex
+++ b/demo/demo.tex
@@ -1,5 +1,10 @@
 \documentclass[10pt]{beamer}
 
+\usepackage[german]{babel}
+\usepackage[utf8]{inputenc}
+
+%\usepackage{beamerinnerthememetropolis}
+\usepackage{beamercolorthememetropolis}
 \usetheme{metropolis}
 \usepackage{appendixnumberbeamer}
 
@@ -12,12 +17,12 @@
 \usepackage{xspace}
 \newcommand{\themename}{\textbf{\textsc{metropolis}}\xspace}
 
-\title{Metropolis}
-\subtitle{A modern beamer theme}
+\title{Titel des Vortrags}
+\subtitle{Beschreibung des Vortrags}
 \date{\today}
-\author{Matthias Vogelgesang}
-\institute{Center for modern beamer themes}
-% \titlegraphic{\hfill\includegraphics[height=1.5cm]{logo.pdf}}
+\author{Autor}
+\institute{FabLab Lübeck e.V.}
+\titlegraphic{\hfill\includegraphics[height=1cm]{LogoFablabLuebeck.pdf}}
 
 \begin{document}
 
