--- a/source/beamercolorthememetropolis.dtx
+++ b/source/beamercolorthememetropolis.dtx
@@ -81,6 +81,11 @@
 \definecolor{mDarkTeal}{HTML}{23373b}
 \definecolor{mLightBrown}{HTML}{EB811B}
 \definecolor{mLightGreen}{HTML}{14B03D}
+\definecolor{mFablabBlue}{HTML}{334D5C}
+\definecolor{mFablabGreen}{HTML}{45B29D}
+\definecolor{mFablabYellow}{HTML}{EFC94C}
+\definecolor{mFablabOrange}{HTML}{E27A3F}
+\definecolor{mFablabRed}{HTML}{DF5A49}
 %    \end{macrocode}
 %
 %
@@ -94,21 +99,21 @@
 \newcommand{\metropolis@colors@dark}{
   \setbeamercolor{normal text}{%
     fg=black!2,
-    bg=mDarkTeal
+    bg=mFablabBlue
   }
   \usebeamercolor[fg]{normal text}
 }
 \newcommand{\metropolis@colors@light}{
   \setbeamercolor{normal text}{%
-    fg=mDarkTeal,
+    fg=mFablabBlue,
     bg=black!2
   }
 }
 \setbeamercolor{alerted text}{%
-  fg=mLightBrown
+  fg=mFablabYellow
 }
 \setbeamercolor{example text}{%
-  fg=mLightGreen
+  fg=mFablabGreen
 }
 %    \end{macrocode}
 %
