removed ugly caption logo

--- a/source/beamerinnerthememetropolis.dtx
+++ b/source/beamerinnerthememetropolis.dtx
@@ -261,10 +261,10 @@
       \usebeamerfont{subsection title}
       \insertsubsectionhead
     \fi
-    \ifx\inserttitlegraphic\@empty\else
-	  {\usebeamercolor[fg]{titlegraphic}\inserttitlegraphic\par}%
-	  \vspace*{0.5em}    
-    \fi
+%    \ifx\inserttitlegraphic\@empty\else
+%	  {\usebeamercolor[fg]{titlegraphic}\inserttitlegraphic\par}%
+%	  \vspace*{0.5em}    
+%   \fi
   \end{center}
 }
 \defbeamertemplate{section page}{progressbar}{
